[gd_scene load_steps=42 format=2]

[ext_resource path="res://src/Actors/Bosses/BurnRooster/RisingLava.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Bosses/BurnRooster/Lava.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Bosses/BurnRooster/rising_lava.res" type="SpriteFrames" id=3]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDamage.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDeath.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Enemies/AI.gd" type="Script" id=7]
[ext_resource path="res://src/Effects/Explosion Particles.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Effects/Remains Particle.tscn" type="PackedScene" id=9]
[ext_resource path="res://pisca_gradient.tres" type="Gradient" id=10]
[ext_resource path="res://src/Effects/Fire/fire2.png" type="Texture" id=11]
[ext_resource path="res://src/Sounds/HIT.wav" type="AudioStream" id=12]
[ext_resource path="res://src/Sounds/56 - MMX - Enemy Death.wav" type="AudioStream" id=13]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=15]
[ext_resource path="res://src/Effects/Fire/fire1.png" type="Texture" id=16]
[ext_resource path="res://src/Effects/Fire/fire3.png" type="Texture" id=17]
[ext_resource path="res://src/Sounds/Rooster - RisingLava.ogg" type="AudioStream" id=18]
[ext_resource path="res://src/Actors/Bosses/BurnRooster/random_pitcher.gd" type="Script" id=19]
[ext_resource path="res://src/Levels/PitchBlack/light.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 102, 86.5 )

[sub_resource type="CanvasItemMaterial" id=58]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="Curve" id=59]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=66]
curve = SubResource( 59 )

[sub_resource type="ParticlesMaterial" id=60]
emission_shape = 2
emission_box_extents = Vector3( 24, 96, 1 )
flag_disable_z = true
direction = Vector3( 0.5, -1, 0 )
spread = 16.13
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 155.0
damping = 1.63
hue_variation = 0.23
hue_variation_random = 0.57
anim_speed = 1.0
anim_speed_random = 0.01
anim_speed_curve = SubResource( 66 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 13.5, 15.5 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 24, 110 )

[sub_resource type="Curve" id=10]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=16]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 13 )

[sub_resource type="Curve" id=42]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=43]
curve = SubResource( 42 )

[sub_resource type="ParticlesMaterial" id=44]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 43 )

[sub_resource type="GradientTexture" id=45]
gradient = ExtResource( 10 )

[sub_resource type="ParticlesMaterial" id=46]
emission_shape = 1
emission_sphere_radius = 18.34
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 800, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.69
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 45 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CanvasItemMaterial" id=55]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="Curve" id=56]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=61]
curve = SubResource( 56 )

[sub_resource type="ParticlesMaterial" id=57]
emission_shape = 2
emission_box_extents = Vector3( 32, 64, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 155.0
anim_speed = 1.0
anim_speed_curve = SubResource( 61 )

[sub_resource type="Gradient" id=62]
offsets = PoolRealArray( 0, 0.242424, 0.515152, 0.768939, 1 )
colors = PoolColorArray( 0.898039, 0.113725, 0, 1, 1, 1, 0.0705882, 1, 0.918779, 0.321592, 0.0165882, 1, 0.978567, 0.820976, 0.0563382, 1, 0.893829, 0.113192, 0, 1 )

[sub_resource type="GradientTexture" id=65]
gradient = SubResource( 62 )

[sub_resource type="ParticlesMaterial" id=64]
emission_shape = 2
emission_box_extents = Vector3( 128, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, -26, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.18
orbit_velocity = 0.08
orbit_velocity_random = 1.0
linear_accel = 25.81
linear_accel_random = 1.0
color_ramp = SubResource( 65 )
hue_variation_random = 0.05

[node name="RisingLava" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 7 )
on_enter_screen = [ NodePath("../Rise") ]

[node name="vision" type="Area2D" parent="AI"]
visible = false
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="AI/vision"]
position = Vector2( 0, 1.5 )
shape = SubResource( 47 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 15 )
z_index = 1
frames = ExtResource( 3 )
animation = "loop"
frame = 3
playing = true
flip_h = true

[node name="fire2" type="Particles2D" parent="animatedSprite"]
material = SubResource( 58 )
position = Vector2( 1, 10 )
z_index = 1
lifetime = 0.35
local_coords = false
process_material = SubResource( 60 )
texture = ExtResource( 11 )

[node name="fire3" type="Particles2D" parent="animatedSprite"]
material = SubResource( 58 )
position = Vector2( 1, 10 )
z_index = 1
lifetime = 0.35
local_coords = false
process_material = SubResource( 60 )
texture = ExtResource( 17 )

[node name="fire1" type="Particles2D" parent="animatedSprite"]
material = SubResource( 58 )
position = Vector2( 1, 10 )
z_index = 1
lifetime = 0.35
local_coords = false
process_material = SubResource( 60 )
texture = ExtResource( 16 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1.5 )
shape = SubResource( 15 )
disabled = true

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 2, 2 )
rect = Rect2( -5, -5, 10, 10 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 48 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 6 )
active = false
damage = 4.0

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 4 )
active = false

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 12 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="EnemyDeath" type="Node2D" parent="."]
script = ExtResource( 5 )
active = false
explosion_duration = 0.0

[node name="Explosion Particles" parent="EnemyDeath" instance=ExtResource( 8 )]
process_material = SubResource( 16 )

[node name="Remains" parent="EnemyDeath" instance=ExtResource( 9 )]
process_material = SubResource( 44 )

[node name="remains_particles" parent="EnemyDeath/Remains" index="0"]
amount = 4
process_material = SubResource( 46 )

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="EnemyDeath"]
stream = ExtResource( 13 )
volume_db = -4.267
max_distance = 600.0
attenuation = 0.951366
bus = "SFX"

[node name="Rise" type="Node2D" parent="."]
script = ExtResource( 2 )
actions = [ "Event" ]
animation = "intro"

[node name="fire1" type="Particles2D" parent="Rise"]
material = SubResource( 55 )
position = Vector2( -1, 2 )
z_index = 1
emitting = false
one_shot = true
explosiveness = 0.86
local_coords = false
process_material = SubResource( 57 )
texture = ExtResource( 16 )

[node name="fire2" type="Particles2D" parent="Rise"]
material = SubResource( 55 )
position = Vector2( -1, 2 )
z_index = 1
emitting = false
lifetime = 0.75
one_shot = true
explosiveness = 0.86
local_coords = false
process_material = SubResource( 57 )
texture = ExtResource( 11 )

[node name="fire3" type="Particles2D" parent="Rise"]
material = SubResource( 55 )
position = Vector2( -1, 2 )
z_index = 1
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.86
local_coords = false
process_material = SubResource( 57 )
texture = ExtResource( 17 )

[node name="fire_loop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = -18.482
autoplay = true
max_distance = 900.0
bus = "SFX"
script = ExtResource( 19 )

[node name="sublight" type="Light2D" parent="."]
scale = Vector2( 3, 16 )
z_index = 277
texture = ExtResource( 20 )
color = Color( 1, 0.360784, 0.141176, 1 )
energy = 0.75
range_layer_min = -512

[node name="particles2D" type="Particles2D" parent="."]
position = Vector2( -1, 112 )
z_index = 5
amount = 32
lifetime = 4.0
process_material = SubResource( 64 )

[connection signal="body_entered" from="AI/vision" to="AI" method="_on_vision_body_entered"]
[connection signal="body_exited" from="AI/vision" to="AI" method="_on_vision_body_exited"]

[editable path="EnemyDeath/Remains"]
